--- a/circle.html
+++ b/circle.html
@@ -12,8 +12,14 @@
       <label for="radius">Input the radius of the circle</label>
       <input type="text" name="radius" id="radius" />
       <button id="submitButton">Submit</button>
+      <div id="output"></div>
+      <h2>Circle Area</h2>
+      <label for="radiusForArea">Input the radius of the circle</label>
+      <input type="text" name="radiusForArea" id="radiusForArea" />
+      <button id="submitAreaButton">Submit</button>
+      <div id="outputArea"></div>
     </form>
-    <div id="output"></div>
+
     <script src="circle.js" type="module"></script>
   </body>
 </html>
